objects/Application_Document_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>Application_Document_Config__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Document Config</label>
        <referenceTo>Application_Document_Config__c</referenceTo>
        <relationshipLabel>Document Checklist</relationshipLabel>
        <relationshipName>Document_Checklist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Doc_Type__c</fullName>
        <label>Doc Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LGAPP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Doc Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Order__c</fullName>
        <label>Document Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Size__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File Size</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>File URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Implementation_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Case</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Document Checklist</relationshipLabel>
        <relationshipName>Document_Checklist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self Input</fullName>
                </value>
                <value>
                    <fullName>Auto Match</fullName>
                </value>
                <value>
                    <fullName>Document Sent for Signature</fullName>
                    <isActive>false</isActive>
                    <label>Document Sent for Signature</label>
                </value>
                <value>
                    <fullName>Document Signed</fullName>
                    <isActive>false</isActive>
                    <label>Document Signed</label>
                </value>
                <value>
                    <fullName>Missing Information</fullName>
                    <isActive>false</isActive>
                    <label>Missing Information</label>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                    <isActive>false</isActive>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Re-Uploaded</fullName>
                    <isActive>false</isActive>
                    <label>Re-Uploaded</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                    <isActive>false</isActive>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>Uploaded</fullName>
                    <isActive>false</isActive>
                    <label>Uploaded</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Content_Document_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tech Content Document Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underwriter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Retrive the the rate Sheet Docs based on this Checkbox.</description>
        <label>Underwriter</label>
        <type>Checkbox</type>
    </fields>
    <label>Document Checklist</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Document_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Required__c</columns>
        <columns>Implementation_Case__c</columns>
        <columns>Status__c</columns>
        <columns>Document_Order__c</columns>
        <columns>File_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Orphaned_Document_Checklist_records</fullName>
        <columns>NAME</columns>
        <columns>Document_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>File_Name__c</columns>
        <columns>Implementation_Case__c</columns>
        <columns>File_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Implementation_Case__c</field>
            <operation>equals</operation>
        </filters>
        <label>Orphaned Document Checklist records</label>
        <sharedTo>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Doc Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Checklist</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>